<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_Intern_Initialize" Id="{5e414b1f-f0cf-41c7-b248-f2af44a76bd1}">
    <Declaration><![CDATA[TYPE ST_Intern_Initialize :
STRUCT
		tnReady		:TON;
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>