<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_PAIn_Initialize" Id="{5cc357ab-1cfd-4ef2-9618-06f711a484d3}">
    <Declaration><![CDATA[TYPE ST_PAIn_Initialize :
STRUCT
	
(*Homing Notches*)	
	bXCam	:BOOL;  	
	bYCam	:BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>