<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="FB_Initialize" Id="{669ff3df-4c5f-4997-80ad-cc7770f12fec}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Initialize
VAR_INPUT
	stPAIn	 				:ST_PAIn_Initialize;
	stConfig				:ST_Config_Initialize;
	bExec				:BOOL;
END_VAR
	
VAR_OUTPUT
	bFini	:BOOL;
	bBus	:BOOL;
	bErr	:BOOL;

	stStatus				:ST_Status_Initialize;
END_VAR

VAR
	stIntern				:ST_Intern_Initialize;
	(*Axis References*)
	XAxis					:AXIS_REF;
	YAxis					:AXIS_REF;
	(*Motion Control Definitions*)
	fbPower_X				:MC_Power;
	fbPower_Y				:MC_Power;
	fbHome_X				:MC_Home;
	fbHome_Y				:MC_Home;
	fbBuildGrp				:CfgBuildExt3DGroup;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
XAxis.ReadStatus();
YAxis.ReadStatus();
fbPower_X(Axis:=XAxis);
fbPower_Y(Axis:=YAxis);	
fbHome_X(Axis:=XAxis);
fbHome_Y(Axis:=YAxis);	

CASE stStatus.iState OF 

	00:	IF bExec THEN
			bBus:=TRUE;
 			stStatus.iState:=05;
		END_IF
		

05:
(*Enable X-Axis*)
		fbPower_X.Enable			:=TRUE;
		fbPower_X.Enable_Positive	:=TRUE;
		fbPower_X.Enable_Negative	:=TRUE;
		
(*Enable Y-Axis*)

		fbPower_Y.Enable			:=TRUE;
		fbPower_Y.Enable_Positive	:=TRUE;
		fbPower_Y.Enable_Negative	:=TRUE;
		
	stIntern.tnReady(IN:=fbPower_X.Status AND fbPower_Y.Status,PT:=T#100MS);
			
		IF stIntern.tnReady.Q THEN
			stStatus.iState:=10;
		END_IF
10:	(*Home X-Axis*)
		fbHome_X.HomingMode			:=MC_DefaultHoming;
		fbHome_X.bCalibrationCam	:=stPAIn.bXCam;
		fbHome_X.Execute			:= stConfig.bExe;
		fbHome_X.Position			:= 0;
	(*Home Y-Axis*)
		fbHome_Y.HomingMode			:=MC_DefaultHoming;
		fbHome_Y.bCalibrationCam	:=stPAIn.bYCam;
		fbHome_Y.Execute			:= stConfig.bExe;
		fbHome_Y.Position			:= 0;
		
		IF NOT fbHome_X.Error AND NOT fbHome_Y.Error AND fbHome_X.Done AND fbHome_Y.Done THEN
			stStatus.iState:=20;
		END_IF
		
20:	(* Build group for interpolation*)
		fbBuildGrp	(
		bExecute	:= TRUE ,
		nGroupId	:= stConfig.nGroup,
		nXAxisId	:= stConfig.nXA,
		nYAxisId	:= stConfig.nYA,
		nZAxisId	:= stConfig.nZA,
		nQ1AxisId	:= 0,
		nQ2AxisId	:= 0,
		nQ3AxisId	:= 0,
		nQ4AxisId	:= 0,
		nQ5AxisId	:= 0,
		tTimeOut	:= T#200MS,
		bErr		=>stStatus.bErr,
		bBusy		=>stStatus.bBus,
		nErrId		=>stStatus.nErr);	
				
	stIntern.tnReady(IN:=TRUE AND NOT stStatus.bErr ,PT:=T#2S);
	IF stIntern.tnReady.Q THEN
		bFini:=TRUE;
		bBus:=FALSE;
		stStatus.iState:=30;
	END_IF		

END_CASE
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>